# internal/controller/routes.go
@@ -1,26 +1,12 @@
 package controller
 
 import (
+	"net/http"
+
 	_ "github.com/AwesomeXjs/tma-server/docs"
 	"github.com/AwesomeXjs/tma-server/internal/middlewares"
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
-	"net/http"
-)
-
-const (
-	baseBath = "/api"
-
-	version1        = "/v1"
-	registration    = "/registration"
-	createPortfolio = "/create-portfolio"
-	deletePortfolio = "/delete-portfolio"
-	updatePortfolio = "/update-portfolio"
-	getPortfolios   = "/portfolios"
-
-	addAsset = "/add-asset"
-
-	test = "/test-validate"
 )
 
 // InitRoutes initializes all the routes for the application.
@@ -34,7 +20,7 @@ func (c *Controller) InitRoutes(server *echo.Echo, botToken string) {
 		{
 			v1.POST(registration, c.User.Registration)
 
-			secureRoutes := v1.Group("")
+			secureRoutes := v1.Group("", middlewares.TelegramValidationMiddleware(botToken))
 			{
 				secureRoutes.POST(createPortfolio, c.Portfolio.CreatePortfolio)
 				secureRoutes.DELETE(deletePortfolio, c.Portfolio.DeletePortfolio)
@@ -45,7 +31,7 @@ func (c *Controller) InitRoutes(server *echo.Echo, botToken string) {
 
 				secureRoutes.POST(test, func(c echo.Context) error {
 					return c.JSON(http.StatusOK, map[string]string{"message": "success"})
-				}, middlewares.TelegramValidationMiddleware(botToken))
+				})
 			}
 
 		}
