# internal/controller/urls.go
@@ -1,0 +1,16 @@
+package controller
+
+const (
+	baseBath = "/api"
+
+	version1        = "/v1"
+	registration    = "/registration"
+	createPortfolio = "/create-portfolio"
+	deletePortfolio = "/delete-portfolio"
+	updatePortfolio = "/update-portfolio"
+	getPortfolios   = "/portfolios/:id"
+
+	addAsset = "/add-asset"
+
+	test = "/test-validate"
+)
